Verschiedene Old Initializer entfernt, nirgends genutztes package populate deaktiviert.
git-svn-id: https://svn.libreccm.org/ccm/trunk@722 8810af33-2d31-482b-a856-94f89814c4df